--- a/app/public/home.html
+++ b/app/public/home.html
@@ -19,11 +19,12 @@
                 <a href="/survey"><button type="button" class="btn btn-lg btn-primary"><span></span> <h4>Take the Survey</h4></button></a>
             </div>
         </div>
-        <div class="footer">
+        
+        <footer>
             <div class="container">
                 <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/jlev2282/FriendFinder">GitHub Repo</a></p>
             </div>
-        </div>
+        </footer>
 
      </div>
     
