--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -18,9 +18,11 @@
         <hr>
 
         <h3><strong>About You</strong></h3>
-        <h4>name (Required)</h4>
+        <h4>Name (Required)</h4>
         <input type="text" id="name" class="form-validate" required>
+        <br>
 
+        <h4>Photo (Required)</h4>
         <input type="text" id="pic" class="form-validate" required>
         <hr>
 
@@ -170,27 +172,9 @@
     </div>
   </div>
 
-  <!-- Modal -->
-  <div id="results-modal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
+  
 
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h2 class="modal-title"><strong>Best Match</strong></h2>
-        </div>
-        <div class="modal-body">
-          <h2 id="match-name"></h2>
-          <img id="match-img" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-
-    </div>
-  </div>
+</div>
 <!--Begin of script for page-->
 
   <script type="text/javascript">
